<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BNM</string>
    <string name="action_settings">Settings</string>
    <string name="URL">http://bnmapp.com/ws/bootstrap.php</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="no_internet_describe">Unable to Connect to Brand New Music service</string>
    <string name="search_hint">Search Artist</string>
    <string name="action_search">Search Artist</string>

    <!-- Welcome Page & Layout -->
    <string name="prompt_welcome">BRAND NEW MUSIC</string>

    <!-- Login Page & Layout -->

    <string name="empty_username">Please provide UserName</string>
    <string name="empty_password">Please provide Password</string>
    <string name="notification_prompt_login">Login 	Error! </string>
    <string name="prompt">Forgot Password? Tap here</string>
    <string name="prompt_login">Enter your BNM Credentials to continue</string>
    <string name="prompt_login_username">Email</string>
    <string name="prompt_login_password">Password</string>
    <string name="signin_prompt_login">SIGN IN</string>
    <string name="signup_prompt_login">SIGN UP</string>

    <!-- Reset Page & Layout -->
    <string name="reset_password">Enter email  registered to continue reset</string>
    <string name="empty_email">Please provide Email</string>
    <string name="reset">RESET</string>
    <string name="app_reset">Reset Password</string>

    <!-- Registration Page & Layout -->
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">Email</string>
    <string name="emailhint">e.g johndoe@email.com</string>
    <string name="pwd">Password</string>
    <string name="pwdhint">Minimum 6 characters</string>
    <string name="confirmpwd">Confirm Password</string>
    <string name="confrmpwd">Repeat password</string>
    <string name="register_bnm">SIGN UP</string>
    <string name="empty_firstname">First Name Not set</string>
    <string name="empty_lastname">Last Name Not set</string>
    <string name="invalid_email">The email provided is not Valid</string>
    <string name="fupi">Password should be at least 6 Characters </string>
    <string name="notification_prompt_reg">Registration Error!</string>
    <string name="pswd_mismatch">Passwords provided do not match!</string>
    <string name="ok_btn">OK</string>
    <string name="securityquest">Provide Security Question</string>
    <string name="security"> Security Question</string>
    <string name="answer">Answer</string>
    <string name="empty_answer">Provide Answer</string>
    <string name="welcome">Get Started</string>

    <!-- List Row Layout -->
    <string name="artist_name">Rihanna</string>
    <string name="album_name">Unapologetic</string>
    <string name="genre_name">Hip Hop</string>
    <string name="album_date">19/11/2012</string>
    <string name="track_count">#0087</string>
    <string name="track_number">Number:1</string>

    <!-- Player Layout & Page -->
    <string name="track_name">Mr.Bad Guy- Eminem</string>
    <string name="latest_track_name">Mr.Bad Guy</string>
    <string name="status_update">I am new on BNM</string>

    <!-- Settings Page -->
    <string name="bnm_settings">BNM SETTINGS</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_sumary">Enable scheduled Notifications to the Phone</string>
    <string name="sync">Auto Sync</string>
    <string name="sync_sumary">Enable auto Sync when Online</string>
    <string name="cache">Image Cache</string>
    <string name="cache_summary">Cache of all images in the app</string>
    <string name="about_bnm"> BNM Version</string>
    <string name="logout_pref">LOGOUT</string>
    <string name="powered_by">Powered by: bnmapp.com</string>
    <string name="logout_acc">LOGOUT</string>
    <string name="email_feedback">Email FeedBack</string>

    <!-- Layout Page & Activity -->
    <string name="artist_name_"></string>
	<string name="status"></string>
	<string name="following">- Following</string>
	
	<!-- Music Player Page & Activity -->
	<string name="action_list">Tracks List</string>
	<string name="track_sampled">Track Played</string>
	<string name="track_sampled_message">You have already Played this track, Please Consider Downloading</string>
	<string name="track_played_message">Track Playback Complete,Please Consider Downloading or skip to the next track</string>
	<!-- Music Player Page & Activity -->
	<string name="no_albums">No Albums</string>
	<string name="no_albums_describe">No Albums could be found for this Artist</string>
	<string name="no_tracks">No Tracks</string>
	<string name="no_tracks_describe">No Tracks could be found from this Album</string>
	<string name="no_tracks_describe_genre">No Tracks could be found from this Genre</string>
</resources>