<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="fill">
        

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fname"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000"
            android:padding="5dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/fname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fname"
            android:inputType="text"
            android:minWidth="250dip"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:background="@drawable/edit_text_holo_light"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lname"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000"
            android:padding="5dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/lname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lname"
            android:inputType="text"
            android:background="@drawable/edit_text_holo_light"
            android:minWidth="250dip"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip"
            android:singleLine="true"
            android:padding="5dp"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailhint"
            android:inputType="textEmailAddress"
            android:minWidth="250dip"
            android:background="@drawable/edit_text_holo_light"
            android:padding="10dp"
            android:scrollHorizontally="true"
            android:textColor="#000000"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip"
            android:singleLine="true"
            android:padding="5dp"
            android:text="@string/pwd"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pswd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pwdhint"
            android:inputType="textPassword"
            android:minWidth="250dip"
            android:padding="10dp"
            android:background="@drawable/edit_text_holo_light"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="#000000"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip"
            android:singleLine="true"
            android:padding="5dp"
            android:text="@string/confirmpwd"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/confirmpswd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confrmpwd"
            android:inputType="textPassword"
            android:minWidth="250dip"
            android:padding="10dp"
            android:background="@drawable/edit_text_holo_light"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="#000000"
            android:textSize="13sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip"
            android:singleLine="true"
            android:padding="5dp"
            android:text="@string/securityquest"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/security"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/security"
            android:inputType="text"
            android:minWidth="250dip"
            android:padding="10dp"
            android:background="@drawable/edit_text_holo_light"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="#000000"
            android:textSize="13sp" />
        <EditText
            android:id="@+id/answer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer"
            android:inputType="text"
            android:minWidth="250dip"
            android:padding="10dp"
            android:background="@drawable/edit_text_holo_light"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="#000000"
            android:textSize="13sp" />
            
            

        <TextView
            android:id="@+id/message_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dip"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_bg"
            android:text="@string/register_bnm"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="13sp" />
        
    </LinearLayout>

</ScrollView>