<?xml version="1.0" encoding="utf-8"?>
<uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ptr_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/artist_profile"
            android:layout_width="150dip"
            android:layout_height="150dip"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:paddingBottom="10dp"
            android:paddingTop="15dp"
            android:src="@drawable/list_stud" />

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/artist_name_"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/artist_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/status"
            android:textSize="12sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:paddingBottom="10sp">

        <ImageView
            android:id="@+id/follow_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/app_name"
            android:paddingLeft="5sp"
            android:src="@drawable/follow" />

        <TextView
            android:id="@+id/following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/rounded_edges"
            android:paddingRight="5sp"
            android:text="@string/following" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
             android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

</LinearLayout>
</uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>