<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:minHeight="200dp"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

  
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000"
            android:paddingBottom="10dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/resetemail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_login_username"
            android:inputType="textEmailAddress"
            android:minWidth="250dip"
            android:background="@drawable/edit_text_holo_light"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:paddingBottom="15dp"
            android:textColor="#000000"
            android:textSize="14sp" />

      
        
        <Button
            android:id="@+id/submitreset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_bg"
            android:text="@string/reset"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif" />

  
    </LinearLayout>

